--- a/GCWG06_HFT_2021221.Client/GCWG06_HFT_2021221.Client.csproj
+++ b/GCWG06_HFT_2021221.Client/GCWG06_HFT_2021221.Client.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GCWG06_HFT_2021221.Models\GCWG06_HFT_2021221.Models.csproj" />
   </ItemGroup>
 
